--- a/views/get_age.erb
+++ b/views/get_age.erb
@@ -1,6 +1,7 @@
 Hello <%= name %>. What is your age?
 
 <form method = "post" action = "/age">
+	<input type = "hidden" name = "user_name" value = <%= name %> >
 	<input type = "number" name = "user_age">
 	<input type = "submit">
 </form>
