--- a/views/get_favorite.erb
+++ b/views/get_favorite.erb
@@ -1,12 +1,10 @@
-<%= Name =>, what are your three favorite numbers?
+Alright <%= name %>, what are your three favorite numbers?
 
 <form method = "post" action = "/numbers">
+	<input type = "hidden" name = "user_name" value = <%= name %> >
 	<input type = "number" name = "user_number_1">
+	<input type = "number" name = "user_number_2">
+	<input type = "number" name = "user_number_3">
 	<input type = "submit">
-	<input type = "number" name = "user_number_2"
-	<input type = "submit">
-	<input type = "number" name = "user_number_3"
-	<input type = "submit"
-	<input type = "hidden" name = "user_name" value = <%= Name => >
 	
 </form>
